# methylation_utils

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
devtest/: args.detect_contamination.json  bin_contamination.tsv  decontaminated_contig_bin.tsv  motifs-scored-read-methylation.tsv
methylome/: Cargo.toml
methylome/src/: contig_methylation.rs  iupac.rs  lib.rs  modtype.rs  motif.rs  strand.rs
motif/: Cargo.toml
motif/src/: iupac.rs  lib.rs  modtype.rs  motif.rs
src/: argparser.rs  data_load.rs  main.rs  processing.rs  types.rs
src/data/: contig.rs  methylation.rs  mod.rs  pileup.rs
src/extract_methylation_pattern/: args.rs  batch_loader.rs  mod.rs  processing.rs  utils.rs
tests/: integration_test.rs
