[package]
name = "epimetheus"
version = "0.4.0"
edition = "2021"
authors = ["semoda@bio.aau.dk"]

description = "Cli tool for fast lookup in pileup for motif methylation"
license = "MIT" 
repository = "https://github.com/SebastianDall/epimetheus"

[workspace]
members = ["methylome", "."]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
seq_io = "0.3.2"
methylome = { path = "methylome"}
rayon = "1.10.0"
indicatif = {version = "0.17.8", features = ["rayon"]}
log = "0.4.22"
env_logger = "0.11.5"
humantime = "2.1.0"
anyhow = "1.0.94"
tempfile = "3.14.0"
bytesize = "1.3.0"
csv = "1.3.1"
ahash = "0.8.11"
# pprof = { version = "0.14", features = ["flamegraph"] }


[profile.release]
debug = true
